# gaia

./: .gitignore  LICENSE  README.md  README.md~  _CoqProject  coq-gaia-numbers.opam  coq-gaia-ordinal-types.opam  coq-gaia-ordinals.opam  coq-gaia-schutte.opam  coq-gaia-sets.opam  coq-gaia-stern.opam  coq-gaia-theory-of-sets.opam  coq-gaia.opam  dune-project  fibm.v  meta.yml  sset10.v  sset11.v  sset12.v  sset13b.v  sset13c.v  sset16a.v  sset16c.v  sset17.v  sset19.v  sset2.v  sset2_aux.v  sset4.v  sset5.v  sset6.v  sset7.v  sset8.v  sset9.v  ssetc.v  ssete1.v  ssete10.v  ssete11.v  ssete3.v  ssete4.v  ssete5.v  (+7 more)
.github/workflows/: coq-ci.yml  docker-action.yml
theories/: dune  fibm.v  sset1.v  sset10.v  sset11.v  sset12.v  sset13a.v  sset13b.v  sset14.v  sset15.v  sset16a.v  sset16b.v  sset16c.v  sset18.v  sset19.v  sset2.v  sset2_aux.v  sset3.v  sset4.v  sset5.v  sset6.v  sset7.v  sset8.v  sset9.v  ssetc.v  ssete1.v  ssete2.v  ssete3.v  ssete4.v  ssete5.v  ssete7.v  ssete8.v  ssete9.v  ssetq1.v  ssetr.v  stern.v
theories/numbers/: Make  dune  sset11.v  sset12.v  sset13b.v  sset13c.v  sset14.v  sset15.v  sset16a.v  sset16b.v  sset17.v  ssetc.v  ssete10.v  ssete11.v  ssete2.v  ssete6.v  ssete7.v  ssete8.v  ssetq1.v  ssetq2.v  ssetr.v  ssetz.v
theories/ordinal_types/: dune
theories/ordinals/: Make  dune  sset12.v  sset13a.v  sset13b.v  sset13c.v  sset15.v  sset16a.v  sset16b.v  sset16c.v  sset17.v  ssete3.v  ssete4.v  ssete5.v  ssete9.v
theories/schutte/: Make  dune  ssete9.v
theories/sets/: Make  dune  sset1.v  sset10.v  sset18.v  sset19.v  sset2.v  sset2_aux.v  sset3.v  sset4.v  sset5.v  sset6.v  sset7.v  sset8.v  sset9.v  ssete1.v
theories/stern/: Make  dune  fibm.v  stern.v
