opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/gaia"
dev-repo: "git+https://github.com/coq-community/gaia.git"
bug-reports: "https://github.com/coq-community/gaia/issues"
license: "MIT"

synopsis: "Implementation of the sets of numbers Z, Q, and R following Bourbaki's Elements of Mathematics in Coq"
description: """
Implementation of the sets of numbers Z, Q, and R following N. Bourbaki's book series
Elements of Mathematics in Coq using the Mathematical Components library."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.10" & < "8.16~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.12.0" & < "1.15~") | (= "dev")}
  "coq-mathcomp-algebra"
  "coq-gaia-theory-of-sets" {= version}
  "coq-gaia-ordinals" {= version}
]

tags: [
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "keyword:integers"
  "keyword:rational numbers"
  "keyword:real numbers"  
  "logpath:gaia.numbers"
]
authors: [
  "JoseÌ Grimm"
  "Alban Quadrat"
]
