opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/gaia"
dev-repo: "git+https://github.com/coq-community/gaia.git"
bug-reports: "https://github.com/coq-community/gaia/issues"
license: "MIT"

synopsis: "Implementation of the sets of numbers Z, Q, and R following Bourbaki's Elements of Mathematics in Coq"
description: """
Implementation of the sets of numbers Z, Q, and R following N. Bourbaki's book series
Elements of Mathematics in Coq using the Mathematical Components library."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "3.5"}
  "coq" {>= "8.16"}
  "coq-mathcomp-ssreflect" {>= "2.0"}
  "coq-mathcomp-algebra"
  "coq-gaia-theory-of-sets" {= version}
  "coq-gaia-ordinals" {= version}
]

tags: [
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "keyword:integers"
  "keyword:rational numbers"
  "keyword:real numbers"  
  "logpath:gaia.numbers"
]
authors: [
  "JoseÌ Grimm"
  "Alban Quadrat"
]
