opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/gaia"
dev-repo: "git+https://github.com/coq-community/gaia.git"
bug-reports: "https://github.com/coq-community/gaia/issues"
license: "MIT"

synopsis: "Implementation of ordinals in Coq using Mathematical Components"
description: """
Datatypes for ordinals in Coq using the Mathematical Components library."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.10" & < "8.16~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.12.0" & < "1.14~") | (= "dev")}
]

tags: [
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "keyword:ordinal arithmetic"
  "keyword:ordinals"
  "logpath:gaia.ordinals"
]
authors: [
  "JoseÌ Grimm"
  "Alban Quadrat"
  "Carlos Simpson"
]
