opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/gaia"
dev-repo: "git+https://github.com/coq-community/gaia.git"
bug-reports: "https://github.com/coq-community/gaia/issues"
license: "MIT"

synopsis: "Implementation and properties of ordinals in Coq using Mathematical Components"
description: """
Implementation and properties of ordinals and cardinals in Coq using
the Mathematical Components library."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.10" & < "8.16~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.12.0" & < "1.15~") | (= "dev")}
  "coq-gaia-theory-of-sets" {= version}
  "coq-gaia-schutte" {= version}
]

tags: [
  "category:Mathematics/Logic/Set theory"
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "keyword:ordered sets"
  "keyword:ordinal arithmetic"
  "keyword:ordinals"
  "keyword:cardinal numbers"
  "logpath:gaia.ordinals"
]
authors: [
  "JoseÌ Grimm"
  "Alban Quadrat"
]
