opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/gaia"
dev-repo: "git+https://github.com/coq-community/gaia.git"
bug-reports: "https://github.com/coq-community/gaia/issues"
license: "MIT"

synopsis: "Implementation of ordinals in Coq following Schütte and Ackermann"
description: """
Types for ordinal numbers in Coq using the Mathematical Components library,
following the approaches of Schütte and Ackermann."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "3.5"}
  "coq" {>= "8.16"}
  "coq-mathcomp-ssreflect" {>= "2.0"}
]

tags: [
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "keyword:ordinal arithmetic"
  "keyword:ordinals"
  "logpath:gaia.schutte"
]
authors: [
  "José Grimm"
  "Alban Quadrat"
]
