opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/gaia"
dev-repo: "git+https://github.com/coq-community/gaia.git"
bug-reports: "https://github.com/coq-community/gaia/issues"
license: "MIT"

synopsis: "Stern-Brocot encoding of numbers and Fibonacci numbers in Coq"
description: """
Stern-Brocot encoding of numbers and Fibonacci numbers in Coq using the
Mathematical Components library.
"""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.10" & < "8.16~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.12.0" & < "1.14~") | (= "dev")}
  "coq-mathcomp-algebra" 
]

tags: [
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "keyword:stern-brocot"
  "keyword:fibonacci numbers"
  "logpath:gaia.stern"
]
authors: [
  "JoseÌ Grimm"
  "Alban Quadrat"
  "Carlos Simpson"
]
