opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/gaia"
dev-repo: "git+https://github.com/coq-community/gaia.git"
bug-reports: "https://github.com/coq-community/gaia/issues"
license: "MIT"

synopsis: "Properties of Fibonacci numbers and the Stern diatomic sequence in Coq"
description: """
Properties of Fibonacci numbers and the Stern diatomic sequence in Coq using the
Mathematical Components library."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.16" & < "8.18~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "2.0.0" & < "2.1~") | (= "dev")}
  "coq-mathcomp-algebra"
]

tags: [
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "keyword:stern-brocot"
  "keyword:fibonacci numbers"
  "logpath:gaia.stern"
]
authors: [
  "JoseÌ Grimm"
  "Alban Quadrat"
]
