opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/gaia"
dev-repo: "git+https://github.com/coq-community/gaia.git"
bug-reports: "https://github.com/coq-community/gaia/issues"
license: "MIT"

synopsis: "Implementation of the Theory of Sets from Bourbaki's Elements of Mathematics in Coq"
description: """
Implementation of the Theory of Sets following N. Bourbaki's book series
Elements of Mathematics in Coq using the Mathematical Components library."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "3.5"}
  "coq" {>= "8.16"}
  "coq-mathcomp-ssreflect" {>= "2.0"}
]

tags: [
  "category:Mathematics/Logic/Set theory"
  "keyword:Bourbaki"
  "keyword:set theory"
  "logpath:gaia.sets"
]
authors: [
  "JoseÌ Grimm"
  "Alban Quadrat"
  "Carlos Simpson"
]
