(coq.theory
 (name gaia.ordinals)
 (package coq-gaia-ordinals)
 (synopsis "Implementation and properties of ordinals in Coq using Mathematical Components")
 (flags :standard
   -w -notation-overridden
   -w -notation-incompatible-format
   -w -ambiguous-paths
   -w -deprecated-hint-without-locality
   -w -deprecated-ident-entry
   -w -deprecated-hint-rewrite-without-locality))
