(coq.theory
 (name gaia.schutte)
 (package coq-gaia-schutte)
 (synopsis "Implementation of ordinals in Coq following Schütte and Ackermann")
 (flags :standard
   -w -notation-overridden
   -w -notation-incompatible-format
   -w -ambiguous-paths
   -w -deprecated-hint-without-locality
   -w -deprecated-ident-entry
   -w -deprecated-hint-rewrite-without-locality))
