(coq.theory
 (name gaia.sets)
 (package coq-gaia-theory-of-sets)
 (synopsis "Implementation of the Theory of Sets from Bourbaki's Elements of Mathematics in Coq")
 (flags :standard
   -w -notation-overridden
   -w -notation-incompatible-format
   -w -ambiguous-paths
   -w -deprecated-hint-without-locality
   -w -deprecated-ident-entry
   -w -deprecated-hint-rewrite-without-locality))
