(coq.theory
 (name gaia.stern)
 (package coq-gaia-stern)
 (synopsis "Stern-Brocot trees and Fibonacci numbers in Coq using Mathematical Components")
 (flags :standard
   -w -notation-overridden
   -w -notation-incompatible-format
   -w -ambiguous-paths
   -w -deprecated-hint-without-locality
   -w -deprecated-ident-entry
   -w -deprecated-hint-rewrite-without-locality))
